# subcommands-put

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  StandardProjectSettings.cmake
include/: torch_consts_generated.h
python/: GPU_Projekt.ipynb  per_label.csv  requirements.txt  tiny.pt  tiny.pte  tiny_qt.pte  top_fp32.csv  top_int8.csv  top_worst.csv
raport/: main.typ  raport.typ
raport/data/: per_label.csv  top_fp32.csv  top_int8.csv  top_worst.csv
src/: main.cpp
